# Ezlo_Pi

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  sdkconfig.esp32c3.4mb  sdkconfig.esp32s3.8mb  sdkconfig.old
components/bme280/: CMakeLists.txt
components/dsc/: dscExample.c  dscKeybus.c  dscKeybus.h  dscKeybusStatus.c
devices/device_0001_digitalOut_generic/: CMakeLists.txt  device_0001_digitalOut_generic.c  device_0001_digitalOut_generic.h
devices/device_0002_digitalOut_relay/: device_0002_digitalOut_relay.c  device_0002_digitalOut_relay.h
devices/device_0003_digitalOut_plug/: CMakeLists.txt  device_0003_digitalOut_plug.c  device_0003_digitalOut_plug.h
devices/device_0009_other_RMT_SK6812/: CMakeLists.txt  SK6812_lib.c  SK6812_lib.h  device_0009_other_RMT_SK6812.c
devices/device_0022_PWM_dimmable_lamp/: device_0022_PWM_dimmable_lamp.c  device_0022_PWM_dimmable_lamp.h
devices/device_0036_PWM_servo_MG996R/: device_0036_PWM_servo_MG996R.c  device_0036_PWM_servo_MG996R.h
devices/device_0038_digitalOut_RGB/: CMakeLists.txt  device_0038_digitalOut_RGB.c
devices/pending_max30102_err/: CMakeLists.txt  MAX30102_SPO2_algorithm.c  MAX30102_SPO2_algorithm.h  sensor_0039_I2C_MAX30102.c  sensor_0039_I2C_MAX30102.h
devices/sensor_0005_I2C_MPU6050/: CMakeLists.txt  sensor_0005_I2C_MPU6050.c  sensor_0005_I2C_MPU6050.h
devices/sensor_0006_I2C_ADXL345/: sensor_0006_I2C_ADXL345.c  sensor_0006_I2C_ADXL345.h
devices/sensor_0007_I2C_GY271/: CMakeLists.txt  sensor_0007_I2C_GY271.c  sensor_0007_I2C_GY271.h
devices/sensor_0008_I2C_LTR303ALS/: ALS_LTR303.c  (+4 more)
ezlopi-core/ezlopi_devices/: CMakeLists.txt  ezlopi_devices.c  ezlopi_devices.h  ezlopi_devices_list.c  ezlopi_devices_list.h
main/: CMakeLists.txt  main.c
(+157 files in other folders)
